Reimplemented CameraInterface to use opencv instead of picamera2

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ name = "pypi"
 flask = "*"
 pigpio = "*"
 pillow = "*"
-picamera2 = "*"
+opencv-python = "*"
+opencv-contrib-python = "*"
 
 [dev-packages]
 
