Reimplemented websocket to use SocketIO

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ pillow = "*"
 opencv-python = "*"
 opencv-contrib-python = "*"
 flask-socketio = "*"
+pygrabber = "*"
+flask-cors = "*"
+python-dotenv = "*"
+websockets = "*"
 
 [dev-packages]
 
