Finally deploys properly

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,7 @@ name = "pypi"
 flask = "*"
 pigpio = "*"
 pillow = "*"
-opencv-python = "*"
-opencv-contrib-python = "*"
+opencv-python-headless = "*"
 flask-socketio = "*"
 pygrabber = "*"
 flask-cors = "*"
