--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,16 @@ services:
   camera-interface:
     image: eliteabhi/camera-interface:latest
     container_name: camera-interface
-    restart: always
+    restart: no
+    privileged: true  # Needed for full access to /dev/video0
+    devices:
+      - /dev/video0:/dev/video0
     environment:
+      DEBUG: 0
       API_URL: http://localhost:5000
       DATETIME_FORMAT: "%Y-%m-%dT%H:%M:%S"
-      IMAGES_SAVE_DIRECTORY: ./captured_images
+      IMAGES_SAVE_DIRECTORY: /app/captured_images
+      CAMERA_DEVICE: /dev/video0
       VIDEO_RESOLUTION: 640x480
       VIDEO_FRAMERATE: "30"
       LEFT_BUTTON_PIN: "18"
@@ -15,11 +20,14 @@ services:
       WEBHOOK_NAME: Interface API
       GUNICORN_WORKER_CLASS: eventlet
       GUNICORN_NUM_WORKERS: "1"
-      BIND_ADDRESS: 127.0.0.1
+      BIND_ADDRESS: 0.0.0.0
       BIND_PORT: "3000"
       GUNICORN_LOG_LEVEL: info
       GUNICORN_KEEPALIVE: "5"
       GUNICORN_TIMEOUT: "30"
     ports:
       - "3000:3000"
+    volumes:
+      - ./captured_images:/app/captured_images
+      - /etc/group:/etc/group:ro  # Ensures group access inside container
 
