Cleanup and overhaul of `buildAndDeploy.sh` script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,15 @@ services:
       CAMERA_DEVICE: /dev/video0
       VIDEO_RESOLUTION: 640x480
       VIDEO_FRAMERATE: "30"
+      DISABLE_BUTTONS: "1"
+      PIGPIOD_ADDRESS: "127.0.0.1:8888"
       LEFT_BUTTON_PIN: "18"
       RIGHT_BUTTON_PIN: "23"
       DEBOUNCE_TIME: "0.2"
       WEBHOOK_NAME: Interface API
       GUNICORN_WORKER_CLASS: eventlet
       GUNICORN_NUM_WORKERS: "1"
-      BIND_ADDRESS: 0.0.0.0
+      BIND_ADDRESS: "0.0.0.0"
       BIND_PORT: "3000"
       GUNICORN_LOG_LEVEL: info
       GUNICORN_KEEPALIVE: "5"
